--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,13 +43,13 @@
 <div class="page-content">
     <div class="profile-page">
         <div class="wrapper">
-            <div class="page-header page-header-small" filter-color="superblue">
-                <div class="page-header-image" data-parallax="true"
-                     style="background-image: url('images/cc-bg-2.jpg')">
+            <div class="page-header page-header-small">
+                <div class="page-header-image" data-parallax="true">
+                    <div class="bg-primary hg-full-height" style="height: 100%"></div>
                 </div>
                 <div class="container">
                     <div class="content-center">
-                        <div class="cc-profile-image"><a href="#"><img alt="Image" src="/images/dhe.jpg"/></a></div>
+                        <div class="cc-profile-image"><a href="#"><img alt="Image" src="/images/dhe.webp"/></a></div>
                         <div class="h2 title"
                              th:text="${cvWebsiteDTO.cv.firstName} + '&nbsp;' + ${cvWebsiteDTO.cv.lastName}">Name
                         </div>
