--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -7,6 +7,7 @@
     <link href="css/aos.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
     <link href="css/cookieConsent.css" rel="stylesheet">
     <noscript>
         <style type="text/css">
