--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <fragment th:fragment="head" th:remove="tag">
-    <link href="icon.ico" rel="icon" sizes="56x56" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
@@ -9,6 +8,29 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/cookieConsent.css" rel="stylesheet">
+
+    <!-- iOS -->
+    <link href="images/favicon/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+    <link href="images/favicon/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+    <link href="images/favicon/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="images/favicon/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+    <link href="images/favicon/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="images/favicon/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="images/favicon/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+    <link href="images/favicon/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+    <link href="images/favicon/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+
+    <!-- Android -->
+    <link href="images/favicon/android-icon-192x192.png" rel="shortcut icon" sizes="192x192">
+
+    <!-- Browsers -->
+    <link href="images/favicon/favicon-16x16.ico" rel="icon" sizes="16x16" type="image/x-icon">
+    <link href="images/favicon/favicon-32x32.ico" rel="icon" sizes="32x32" type="image/x-icon">
+    <link href="images/favicon/favicon-96x96.ico" rel="icon" sizes="96x96" type="image/x-icon">
+    <link href="images/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="images/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="images/favicon/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png">
+
     <noscript>
         <style type="text/css">
             [data-aos] {
