consent revoke added to imprint

--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -17,7 +17,8 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="card-body">
                             <div class="h4 mt-0 title">Imprint</div>
-                            <p>Here comes the pain...</p>
+                            <p>Here comes the pain... <a href="javascript:revokeConsent()">Revoke cookie decision</a>
+                            </p>
                         </div>
                     </div>
                 </div>
