--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
         <div class="wrapper">
             <div class="page-header page-header-small">
                 <div class="page-header-image" data-parallax="true">
-                    <div class="bg-primary hg-full-height" style="height: 100%"></div>
+                    <div class="bg-primary hg-full-height"></div>
                 </div>
                 <div class="container">
                     <div class="content-center">
@@ -83,8 +83,8 @@
 </div>
 <footer class="footer">
     <div class="container text-center">
-        <a class="btn btn-link" href="/imprint">Imprint</a>
-        <a class="btn btn-link" href="/gdpr">Privacy and cookies</a>
+        <a class="btn btn-link" href="/imprint" target="_self">Imprint</a>
+        <a class="btn btn-link" href="/gdpr" target="_self">Privacy and cookies</a>
     </div>
 </footer>
 <script src="js/core/jquery.3.2.1.min.js"></script>
