--- a/src/main/resources/templates/gdpr.html
+++ b/src/main/resources/templates/gdpr.html
@@ -8,15 +8,17 @@
     <script th:replace="fragments/head :: head"></script>
 </head>
 <body>
+<header th:replace="fragments/head :: simpleHeader"></header>
 <div class="page-content">
-    <div class="section" id="whoami">
+    <div th:replace="fragments/content :: simpleContentHeader('Data Protection')"></div>
+    <div class="section" id="gdpr">
         <div class="container">
             <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         <div class="card-body">
-                            <div class="h4 mt-0 title">Privacy and cookies</div>
-                            <p>Here comes the pain...</p>
+                            <p>Here comes the pain... <a href="javascript:revokeConsent()">Revoke cookie decision</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -24,5 +26,4 @@
         </div>
     </div>
 </div>
-
 </body>
