--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -9,14 +9,15 @@
     <script th:replace="fragments/head :: head"></script>
 </head>
 <body>
+<header th:replace="fragments/head :: simpleHeader"></header>
 <div class="page-content">
-    <div class="section" id="whoami">
+    <div th:replace="fragments/content :: simpleContentHeader('Imprint')"></div>
+    <div class="section" id="imprint">
         <div class="container">
             <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         <div class="card-body">
-                            <div class="h4 mt-0 title">Imprint</div>
                             <p>Here comes the pain... <a href="javascript:revokeConsent()">Revoke cookie decision</a>
                             </p>
                         </div>
@@ -26,5 +27,4 @@
         </div>
     </div>
 </div>
-
 </body>
