--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -40,6 +40,7 @@
         </style>
     </noscript>
     <script src="js/cookieConsentMain.js"></script>
+    <script th:replace="fragments/cookieConsent :: cookieConsent"></script>
     <script src="js/cookieConsent.js"></script>
 </fragment>
 
