--- a/src/main/resources/templates/gdpr.html
+++ b/src/main/resources/templates/gdpr.html
@@ -10,14 +10,16 @@
 <body>
 <header th:replace="fragments/head :: simpleHeader"></header>
 <div class="page-content">
-    <div th:replace="fragments/content :: simpleContentHeader('Data Protection')"></div>
+    <div th:replace="fragments/content :: simpleContentHeader(#{privacy_and_cookies_title})"></div>
     <div class="section" id="gdpr">
         <div class="container">
             <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         <div class="card-body">
-                            <p>Here comes the pain... <a href="javascript:revokeConsent()">Revoke cookie decision</a>
+                            <p>Here comes the pain... <a href="javascript:revokeConsent()"
+                                                         th:text="#{cookie_consent_revoke_text}">Revoke cookie
+                                decision</a>
                             </p>
                         </div>
                     </div>
