--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -67,9 +67,9 @@
                     <div class="content-center">
                         <div class="cc-profile-image"><a href="#"><img alt="Image" src="/images/dhe.webp"/></a></div>
                         <div class="h2 title"
-                             th:text="${cvWebsiteDTO.cv.firstName} + '&nbsp;' + ${cvWebsiteDTO.cv.lastName}">Name
+                             th:utext="${cvWebsiteDTO.cv.firstName} + '&nbsp;' + ${cvWebsiteDTO.cv.lastName}">Name
                         </div>
-                        <p class="category text-white" th:text="${cvWebsiteDTO.cv.jobTitle}">Job Description</p><a
+                        <p class="category text-white" th:utext="${cvWebsiteDTO.cv.jobTitle}">Job Description</p><a
                             class="btn btn-primary smooth-scroll mr-2" data-aos="zoom-in"
                             data-aos-anchor="data-aos-anchor" href=""
                             th:href="'#' + ${cvWebsiteDTO.contact.target.id}">Hire Me</a>
