--- a/src/main/resources/templates/gdpr.html
+++ b/src/main/resources/templates/gdpr.html
@@ -18,7 +18,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="card-body">
                             <p>Here comes the pain... <a href="javascript:revokeConsent()"
-                                                         th:text="#{cookie_consent_revoke_text}">Revoke cookie
+                                                         th:utext="#{cookie_consent_revoke_text}">Revoke cookie
                                 decision</a>
                             </p>
                         </div>
